<resources>
    <string name="app_name">MyLife</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MyLife</string>
    <string name="nav_header_subtitle">nat.gerday@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_lists">Lists</string>
    <string name="menu_filter_high">High priority</string>
    <string name="menu_filter_medium">Medium priority</string>
    <string name="menu_filter_low">Low priority</string>

    <string name="new_list_hint">Enter your list name</string>
    <string name="new_todo_hint">Enter your task name</string>

    <string name="no_alarm">No deadline set</string>

    <string name="title_activity_todos">TodosActivity</string>

    <string name="menu_backup">Send Backup</string>
    <string name="menu_backup_local">Local Backup</string>
    <string name="menu_load_backup">Load Backup</string>
    <string name="menu_filter_urgent">Urgent</string>
    <string name="menu_filter_missed">Missed</string>
    <string name="quick_add_hint">Quick add todo</string>
    <string name="delete_marked">Delete marked tasks</string>
    <string name="menu_tasks">Tasks</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string-array name="priorities">
        <item>None</item>
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
    </string-array>
</resources>
