<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_lists"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_lists" />
        <item
            android:id="@+id/nav_filter_high"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_filter_high" />
        <item
            android:id="@+id/nav_filter_medium"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_filter_medium" />
        <item
            android:id="@+id/nav_filter_low"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_filter_low" />
    </group>

    <item android:title="Tools">
        <menu>
            <item
                android:id="@+id/nav_backup"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_backup" />
        </menu>
    </item>

</menu>
